# AI-Adaptive-Tutoring-System

./: .env  README.md  pyproject.toml  requirements.txt
src/adaptive_tutoring_system_py/: chatbot.py  crew.py  main.py  streamlit_chatbot.py  together_llm.py
src/adaptive_tutoring_system_py/config/: agents.py  tasks.py
